--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -1,2 +1,147 @@
-@import "/node_modules/bootstrap/scss/bootstrap.scss";
+@import "~bootstrap/scss/bootstrap.scss";
 
+@import "./scss/contactPage.scss";
+
+$main-font: Raleway,
+"sans-serif";
+$blog-font: Old Standard TT,
+"sans-serif";
+$heading: Raleway,
+"sans-serif";
+$main-color: #3b3b3b;
+
+
+
+
+
+body {
+    font-family: $main-font;
+    color: $main-color;
+}
+
+nav{
+    background: #fafafa;
+}
+.navbar-nav{
+    text-align:center;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: $heading;
+}
+
+h1 {
+    font-size: 52px;
+    margin-bottom: 20px;
+}
+
+h2 {
+    font-size: 44px;
+    margin-bottom: 16px;
+}
+
+h4 {
+    font-style: oblique;
+    font-variant: normal;
+    font-size: 16px;
+}
+
+a {
+    color: $main-color;
+}
+
+p {
+    font-family: $main-font;
+    font-size: 20px;
+}
+
+ul {
+    list-style-type: none;
+    margin-bottom: 8px;
+    padding-left: 4px;
+}
+
+li {
+    font-family: $main-font;
+    font-size: 16px;
+}
+
+.card {
+    border: none;
+}
+
+.card-heading {
+    font-weight: 600;
+    margin-top: 8px;
+}
+
+.blog-text {
+    font-family: $blog-font;
+    font-size: 22px;
+    max-width: 700px;
+    line-height: 42px;
+}
+
+.hero-image {
+    height: 20vh;
+}
+
+.bp-title {
+    padding-top: 20%;
+    padding-bottom: 20%;
+}
+
+.post-list {
+    font-size: 12px;
+    list-style-type: none;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.highway {
+    max-width: 800px;
+    display: block;
+    margin: auto;
+    font-size: 22px;
+    font-family: $blog-font;
+}
+
+.highway p {
+    font-family: $blog-font;
+    font-size: 22px;
+}
+
+.navbar {
+    position: relative;
+ 
+}
+
+
+@media (min-width: 576px) {
+    .card-columns {
+        column-count: 2;
+    }
+}
+
+@media (min-width: 576px) {}
+
+@media (min-width: 768px) {
+    .card-columns {
+        column-count: 3;
+    }
+}
+
+@media (min-width: 992px) {}
+
+@media (min-width: 1200px) {
+    .card-columns {
+        column-count: 4;
+    }
+}
