--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -1,5 +1,6 @@
 @import "~bootstrap/scss/bootstrap.scss";
 @import "./scss/contactPage.scss";
+@import "./scss/blogPost.scss";
 @import url('https://fonts.googleapis.com/css?family=Assistant|Cambo|La+Belle+Aurore');
 
 $main-font: Assistant, "serif";
