--- a/src/components/scss/blogPost.scss
+++ b/src/components/scss/blogPost.scss
@@ -1,3 +1,13 @@
 .gatsby-image-wrapper{
     height: 40vh;
 }
+
+.blog-heading{
+    margin-top: 56px;
+    margin-bottom: 32px;
+}
+
+.intro-text{
+    font-size: 23px;
+    margin-bottom: 50px;
+}
