--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -1,6 +1,7 @@
 @import "~bootstrap/scss/bootstrap.scss";
 @import "./scss/contactPage.scss";
 @import "./scss/blogPost.scss";
+@import "./scss/font.scss";
 @import url('https://fonts.googleapis.com/css?family=Major+Mono+Display|Noto+Serif+SC|Oswald|Staatliches');
 
 
@@ -25,6 +26,7 @@ body {
 
 nav {
     background: #fafafa;
+    box-shadow: 0px 0px 40px 0px #0000001c;
 }
 
 .navbar-nav {
@@ -38,22 +40,6 @@ h4,
 h5,
 h6 {
     font-family: $heading1;
-}
-
-h1 {
-    font-size: 56px;
-    margin-bottom: 20px;
-}
-
-h2 {
-    font-size: 44px;
-    margin-bottom: 16px;
-}
-
-h4 {
-    font-style: oblique;
-    font-variant: normal;
-    font-size: 16px;
 }
 
 a {
