--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -139,7 +139,7 @@ li {
         transition: ease box-shadow 1s;
 
         &:focus {
-            background: ;
+            background: #fafafa ;
             box-shadow: 0px 2px 3px 0px #0000002e;
             outline: 0;
             border-radius: 2px;
