--- a/src/components/scss/font.scss
+++ b/src/components/scss/font.scss
@@ -1,3 +1,4 @@
+$heading: 'Oswald', "sans-serif";
 
 h1 {
     font-size: 32px;
@@ -13,6 +14,10 @@ h4 {
     font-style: oblique;
     font-variant: normal;
     font-size: 16px;
+}
+
+.nav-font{
+    font-family: $heading;
 }
 
 @media (min-width: 576px) {
