--- a/src/components/scss/contactPage.scss
+++ b/src/components/scss/contactPage.scss
@@ -9,8 +9,9 @@
         border: 0;
         //   -webkit-text-fill-color: green;
         -webkit-box-shadow: 0px 0px 9px 1px #0000002e;
-        box-shadow: 0px 3px 9px 0px #0000002e;
+        box-shadow:  0px 3px 9px 0px #0000002e;
         transition: background-color 5000s ease-in-out 0s;
+
     }
 
     input:-webkit-autofill:focus {
@@ -24,6 +25,8 @@
 
     input,
     textarea {
+        background-color: #ececec;
+        // box-shadow:  0px 1px 3px 0px #0000002e;
 
         min-width: 100%;
         min-height: 66px;
@@ -34,10 +37,10 @@
         outline: 0;
         border: 0;
         border-radius: 2px;
-        transition: ease box-shadow 2s;
+        transition: ease box-shadow 0.5s;
 
         &:focus {
-            background: #fafafa;
+            background: #ececec;
             box-shadow: 0px 2px 3px 0px #0000002e;
             outline: 0;
             border-radius: 2px;
@@ -55,10 +58,10 @@
     button {
         min-width: 100%;
         min-height: 60px;
-        background-color: pink;
+        background-color: #a57982;
         outline: 0;
         border: 0;
-        color: #3b3b3b;
+        color: white;
         cursor: pointer;
         border-radius: 2px;
         padding: 8px 16px 8px 16px;
@@ -67,7 +70,7 @@
         transition: ease background-color 0.5s;
 
         &:hover {
-            background-color: darken($color: pink, $amount: 10%);
+            background-color: darken($color: #a57982, $amount: 10%);
             box-shadow: 0px 2px 6px 0px #0000002e;
         }
     }
